--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   "devDependencies": {
     "@openzeppelin/contracts": "^4.1.0",
     "@openzeppelin/test-helpers": "^0.5.11",
-    "@truffle/hdwallet-provider": "^1.4.0",
     "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.2.0"
+    "ethers": "^5.2.0",
+    "truffle-contract-size": "^2.0.1",
+    "@truffle/hdwallet-provider": "2.0.0"
   }
 }
